--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.aptea</groupId>
-  <artifactId>base-ejb-war</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  <name>base-ejb-war</name>
-  <modules>
-		<module>base-ejb-war-ear</module>
-		<module>base-ejb-war-ejb</module>
-		<module>base-ejb-war-web</module>
-  </modules>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.aptea</groupId>
+    <artifactId>base-ejb-war</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <name>base-ejb-war</name>
+    <modules>
+        <module>base-ejb-war-ear</module>
+        <module>base-ejb-war-ejb</module>
+        <module>base-ejb-war-web</module>
+    </modules>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.github.zg2pro.formatter</groupId>
+                <artifactId>zg2pro-formatter-plugin</artifactId>
+                <version>0.1-SNAPSHOT</version>
+
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>apply</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
