--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,28 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>base-ejb-war</name>
-
+<licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+	
+    <developers>
+        <developer>
+            <name>Gregory Anne</name>
+            <email>englishblazere@free.fr</email>
+            <url>https://github.com/zg2pro</url>
+        </developer>
+    </developers>
+        
+    <scm>
+        <connection>scm:git:https://github.com/zg2pro/springmvc-ejb-keynectis.git</connection>
+        <developerConnection>scm:git:git@github.com:zg2pro/springmvc-ejb-keynectis.git</developerConnection>
+        <url>https://github.com/zg2pro/springmvc-ejb-keynectis</url>
+        <tag>HEAD</tag>
+    </scm>
     <modules>
         <module>base-ejb-war-ear</module>
         <module>base-ejb-war-ejb</module>
